test/asm/load-in-load.err
error: load-in-load.asm(5):
    Found `ENDL` outside of a `LOAD` block
error: Assembly aborted (1 error)!
